k8s/sonarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarr
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: sonarr
          image: linuxserver/sonarr:preview
          ports:
            - name: sonarr
              containerPort: 8989
          volumeMounts:
            - name: server
              mountPath: /config
              subPath: sonarr
            - name: data
              mountPath: /tv
              subPath: plex/TV
            - name: data
              mountPath: /data
              subPath: transmission
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
        - name: data
          persistentVolumeClaim:
            claimName: data
