k8s/sonarr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("sonarr.mchill.io")
      kind: Rule
      services:
        - name: sonarr
          port: 8989
